--- a/Final-project-with-cheats/index.html
+++ b/Final-project-with-cheats/index.html
@@ -105,7 +105,8 @@
           <div class="footer-container">
             <div class="mdl-logo">&copy; Yuri's Homepage</div>
             <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
+              <li><a href="https://www.gnu.org/licenses/gpl-3.0.html">License & Terms(for content only)</a></li>
+              <li>Design: <a href="https://templateflip.com/material-portfolio" target="_blank">TemplateFlip</a></div></li>
             </ul>
           </div>
         </footer>
