--- a/Final-project-with-cheats/pages/article-2.html
+++ b/Final-project-with-cheats/pages/article-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
+    <title>Sites</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../styles/material.css" rel="stylesheet">
@@ -29,30 +29,20 @@
           <div class="mdl-grid site-max-width">
             <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp page-content">
               <div class="mdl-card__title">
-                <h1 class="mdl-card__title-text">About</h1>
+                <h1 class="mdl-card__title-text">Sites</h1>
               </div>
-              <div class="mdl-card__media"><img class="article-image" src="../img/08.jpg" border="0" alt="About">
+              <div class="mdl-card__media"><img class="article-image" src="../img/material-2.png" border="0" alt="About">
               </div>
               <div class="mdl-grid site-copy">
-                <div class="mdl-cell mdl-cell--12-col"><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction of myself</h3>
+                <div class="mdl-cell mdl-cell--12-col"><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Some of my other sites</h3>
 <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-<p>   I'm a international student from China, I was born in the early 2000s, So I guess I can't drink beer in the US just yet(Laugh). But joking aside, Let's talk a little about me</p>
-<p>   I'm a CSD student, I'm a home cook, I'm a cell phone photographer, I'm a amateur locksmith, and the list goes on and on..... </p>
-<p>   I have a lot of hobbies, although I'm not very good at ... Lets say most of the things. But I like to give it a try anyway. Because I think that's how life should be, to explore and expand the knowledges until you can't go forward anymore</p>
-<p>   It might come as a surprise to you.. but me, as a CSD student, have not learned anything about programming before the last quarter of school. I started as a amateur PC builder during my middle school time when I was not studying AT ALL in class. </p>
-<p>   But by doing so it leads me to a number of years wasting time and energy looping around schools whose resources and proples are.. well.. let's say it wasn't pleasant.. </p>
-<p>   I feels lucky when I heard that I can skip highschool and go directly to college, that's what ultimately brings me here. </p>
+<ul>
+  <li><h4><a href="https://yuris.moe">Yuris.moe(current main)</a></h4></li>
+  <li><h4><a href="https://yuri.computer">Yuri.computer(Reserved Domain)</a></h4></li>
+  <li><h4><a href="https://yurishouse.net">Yurishouse.net(Old homepage)</a></h4></li>
+</ul>
 </div>
 
-
-<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">About This Site</h3>
-<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-    <p>
-      This site is a heavily modifiled version of <a href="https://templateflip.com/templates/material-portfolio/">This Template</a> I added the background image and made a lot of adjustment. The contact form is powered via <a href="https://formspree.io/">formspree.io</a>
-      <br>
-      All design credits goes to origional Designer, Artist, and Thanks Google for the  <a href="https://github.com/google/material-design-lite">material css framework</a>
-    </p>
-</div>
 
 
 </div>
