--- a/Final-project-with-cheats/pages/articles.html
+++ b/Final-project-with-cheats/pages/articles.html
@@ -32,12 +32,12 @@
             <img class="article-image" src="../img/material-1.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Rocky Peak</h2>
+            <h2 class="mdl-card__title-text">My Shared Photo Library</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+            Cats, daily pics, mushrooms, weird vintage items, all taken with my phone.
         </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
+          <a class="mdl-button mdl-button--colored mdl-button--accent" href="article-1.html">
             Learn More
           </a>
         </div>
@@ -47,12 +47,12 @@
             <img class="article-image" src="../img/material-2.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Night Shadow</h2>
+            <h2 class="mdl-card__title-text">My other domains</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+            Checkout the sites I have!
         </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
+          <a class="mdl-button mdl-button--colored mdl-button--accent" href="article-2.html">
             Learn More
           </a>
         </div>
@@ -62,107 +62,41 @@
             <img class="article-image" src="../img/material-3.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Sky Reach</h2>
+            <h2 class="mdl-card__title-text">My Hobbies</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+           Some Notes about my hobbles, my life, and else
         </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
+          <a class="mdl-button mdl-button--colored mdl-button--accent" href="article-3.html">
             Learn More
           </a>
         </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-4.png" border="0" alt="">
-        </div>
+    </div><br>
+    <section class="section--center mdl-grid site-max-width">
+      <header class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white  mdl-shadow--4dp">
+        <img src="../img/avatar2.jpg" alt="Avatar">
+      </header>
+      <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Pencil Tip</h2>
+            <h2 class="mdl-card__title-text">Have a question?</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
+          if you'd like to see some more articles / entries, contact me and I will try my best to make it happens!
         </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-5.png" border="0" alt="">
+        <div class="mdl-card__actions  mdl-card--border mdl-card__supporting-text">
+          <a href="../pages/contact.html" class="mdl-button mdl-button--colored mdl-button--accent">Click here</a> To contact me
         </div>
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Magic Leaves</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-6.png" border="0" alt="">
-        </div>
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Water Flow</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-7.png" border="0" alt="">
-        </div>
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Lonely Bridge</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-8.png" border="0" alt="">
-        </div>
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Busy Street</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-    </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-            <img class="article-image" src="../img/material-9.png" border="0" alt="">
-        </div>
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">City Scape</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
+      </div>
+    </section>
     </div>
 </div></div>
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <div class="mdl-logo">&copy; Yuri's Homepage</div>
             <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
+              <li><a href="https://www.gnu.org/licenses/gpl-3.0.html">License & Terms(for content only)</a></li>
+              <li>Design: <a href="https://templateflip.com/material-portfolio" target="_blank">TemplateFlip</a></div></li>
             </ul>
           </div>
         </footer>
