--- a/Final-project-with-cheats/pages/article-3.html
+++ b/Final-project-with-cheats/pages/article-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Page</title>
+    <title>Hobbies</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../styles/material.css" rel="stylesheet">
@@ -29,41 +29,24 @@
           <div class="mdl-grid site-max-width">
             <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp page-content">
               <div class="mdl-card__title">
-                <h1 class="mdl-card__title-text">Portfolio Page</h1>
+                <h1 class="mdl-card__title-text">Hobbies</h1>
               </div>
-              <div class="mdl-card__media"><img class="article-image" src="img/portfolio-header.jpg" border="0" alt="Portfolio Page">
+              <div class="mdl-card__media"><img class="article-image" src="../img/08.jpg" border="0" alt="About">
               </div>
               <div class="mdl-grid site-copy">
-                <div class="mdl-cell mdl-cell--12-col"><p><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3></p>
-<div class="mdl-cell mdl-cell--10-col mdl-card__supporting-text no-padding ">
-    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-    <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                <div class="mdl-cell mdl-cell--12-col"><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">My hobbies</h3>
+<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+<ul>
+  <li>Photography</li>
+  <li>Programming</li>
+  <li>Amateur Locksmith</li>
+  <li>Web development</li>
+  <li>PC Building</li>
+  <li>Scuba Diving</li>
+</ul>
 </div>
 
 
-<div class="mdl-grid">
-<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Design</h3>
-<div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
-    <p>
-        Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-    </p>
-</div>
-  <div class="mdl-cell mdl-cell--6-col">
-      <img class="article-image" src="../img/portfolio4.jpg" border="0" alt="">
-  </div>
-</div>
-
-<div class="mdl-grid">
-  <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Product</h3>
-  <div class="mdl-cell mdl-cell--9-col mdl-card__supporting-text no-padding ">
-      <p>
-          Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-      </p>
-  </div>
-  <div class="mdl-cell mdl-cell--3-col mdl-card__supporting-text no-padding ">
-      <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#">View<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></a>
-  </div>
-</div>
 </div>
               </div>
             </div>
@@ -71,9 +54,10 @@
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <div class="mdl-logo">&copy; Yuri's Homepage</div>
             <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
+              <li><a href="https://www.gnu.org/licenses/gpl-3.0.html">License & Terms(for content only)</a></li>
+              <li>Design: <a href="https://templateflip.com/material-portfolio" target="_blank">TemplateFlip</a></div></li>
             </ul>
           </div>
         </footer>
