--- a/Gallery-html-class/index.html
+++ b/Gallery-html-class/index.html
@@ -41,7 +41,7 @@ div.desc {
 <body>
 
 <h1>Image Gallery</h1>
-<h2>by Zhongli Liang</h2>
+<h2>by Shiina Yuri</h2>
 
 <div class="gallery">
     <a target="_blank" href="images/05.jpg">
