--- a/html-class/Zhongli-Liang-assignment3.html
+++ b/html-class/Zhongli-Liang-assignment3.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main>
-      <h1>Zhongli Liang hybrid - assignment 3</h1>
+      <h1>Shiina Yuri hybrid - assignment 3</h1>
       <table class="tbs">
         <tr>
           <!-- To make the image accessable I uploaded it to my website's backend -->
