--- a/Final-project-with-cheats/index.html
+++ b/Final-project-with-cheats/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home page for Zhongli Liang (Yuri)</title>
+    <title>Home page for Shiina Yuri (Yuri)</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="styles/material.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="pages/contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
       <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
         <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Home page for Zhongli Liang (Yuri)</span></span></div>
+            <div class="site-logo"></div><span class="site-description">Home page for Shiina Yuri (Yuri)</span></span></div>
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
           <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Home</a><a class="mdl-navigation__link" href="pages/articles.html">Articles</a><a class="mdl-navigation__link" href="pages/about.html">About</a><a class="mdl-navigation__link" href="pages/contact.html">Contact</a>
           </nav>
